@@ -1,3 +1,9 @@
+2020-05-30 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/mcs51/ralloc.c (getRegBitTry): reverted to getRegBit
+	  (serialRegAssign): prefer to spil bit over using register
+	  (fillGaps): bug fix, do not change reg_type
+
 2020-05-29 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/pdk/gen.c:
